--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
   "description": "اهلا بك في تليثون ياسين المصري { @y_a_n_u_u }",
   "logo": "https://telegra.ph/file/979fe639e5e6b325c8c68.jpg",
   "keywords": ["plugin","modular","productivity"],
-  "repository": "https://github.com/YASEEN15/Yasee33",
+  "repository": "https://github.com/YASEEN15/BD5555",
   "website": "#TODO",
   "success_url": "#TODO",
   "env": {
